# poetry-demo

./: README.md  pyproject.toml
tests/: test_simple.py
