[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["riccione <riccione@protonmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
flake8 = "^5.0.4"
selenium = "^4.4.3"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
